Update from August 7, 2021

--- a/66004-h/66004-h.htm
+++ b/66004-h/66004-h.htm
@@ -26,7 +26,7 @@ body{margin-left:4%;margin-right:6%;background:#ffffff;color:black;font-family:"
 max-width:30em;padding:.7em;}
 
 @media handheld
-{.bbox1 {display: block;}}
+{.bbox1 {display: inline-block;}}
 
 .bbox2     {border:solid 2px black;margin-bottom:.7em;
 padding:.5em;}
